--- a/doku/templates/doku/index.html
+++ b/doku/templates/doku/index.html
@@ -8,7 +8,9 @@
 		<div class="minimize-button active">-</div>
 		<div class="minimize-this">
 			<div class="Formular">
-				<form name="neuer_Einsatz" action="{% url 'doku:neuerEinsatz' %}" method="post" autocomplete="off">
+				<form name="neuer_Einsatz"
+					  action="{% if training %}{% url 'doku:neuesTraining' %}{% else %}{% url 'doku:neuerEinsatz' %}{% endif %}"
+					  method="post" autocomplete="off">
 					{% csrf_token %}
 					<input hidden class="do-not-show" autocomplete="false">
 					<select class="Ort" name="Ort">
@@ -22,7 +24,9 @@
 					<select name="Stichwort">
 							<option value="" disabled selected>Alarmstichwort</option>
 						{% for Stichwort in alle_Stichworte %}
-							<option value="{{ Stichwort.Kurzname }}">{{ Stichwort.Kurzname }} - {{ Stichwort.Langname }}</option>
+							<option value="{{ Stichwort.Kurzname }}">
+								{{ Stichwort.Kurzname }} - {{ Stichwort.Langname }}
+							</option>
 						{% endfor %}
 					</select><br />
 					<input type="submit" value="Hinzufügen">
@@ -48,7 +52,21 @@
 		<div class="minimize-this">&nbsp;
 			<ul>
 			{% for einsatz in alle_Einsaetze %}
-				{% if not einsatz.Ende %}<a href="{% url 'doku:einsatz' einsatz.Nummer %}"><li {% if not einsatz.Ende %}class="Wichtig"{% endif %}>#{{ einsatz.Nummer }} - {{ einsatz.Stichwort.Langname }} {% if einsatz.OrtFrei %}{{ einsatz.OrtFrei }}{% else %}{{ einsatz.Ort.Langname }}{% endif %}{% if einsatz.extNummer %} (#{{ einsatz.extNummer }}){% endif %}</li></a>{% endif %}
+				{% if not einsatz.Ende %}
+				<a href="{% url 'doku:einsatz' einsatz.Nummer %}">
+					<li {% if not einsatz.Ende %}class="Wichtig"{% endif %}>
+						#{{ einsatz.Nummer }} - {{ einsatz.Stichwort.Langname }}
+						{% if einsatz.OrtFrei %}
+							{{ einsatz.OrtFrei }}
+						{% else %}
+							{{ einsatz.Ort.Langname }}
+						{% endif %}
+						{% if einsatz.extNummer %}
+							(#{{ einsatz.extNummer }})
+						{% endif %}
+					</li>
+				</a>
+				{% endif %}
 			{% endfor %}
 			</u>
 		</div>
@@ -59,7 +77,28 @@
 		<div class="minimize-this">&nbsp;
 			<ul>
 			{% for einsatz in alle_Einsaetze %}
-				{% if einsatz.Ende %}<a href="{% url 'doku:einsatz' einsatz.Nummer %}"><li>{{ einsatz.Stichwort.Kurzname }} {% if einsatz.OrtFrei %}{{ einsatz.OrtFrei }}{% else %}{{ einsatz.Ort.Langname }}{% endif %}{% if einsatz.extNummer %} <b>#{{ einsatz.extNummer }}</b>{% endif %}<ul><li>Von: {{ einsatz.Erstellt }}</li><li>Bis: {{ einsatz.Ende }}</li></ul></li></a>{% endif %}
+				{% if einsatz.Ende %}
+				<a href="{% url 'doku:einsatz' einsatz.Nummer %}">
+				<li>{{ einsatz.Stichwort.Kurzname }}
+					{% if einsatz.OrtFrei %}
+						{{ einsatz.OrtFrei }}
+					{% else %}
+						{{ einsatz.Ort.Langname }}
+					{% endif %}
+					{% if einsatz.extNummer %}
+						<b>#{{ einsatz.extNummer }}</b>
+					{% endif %}
+					<ul>
+						<li>
+							Von: {{ einsatz.Erstellt }}
+						</li>
+						<li>
+							Bis: {{ einsatz.Ende }}
+						</li>
+					</ul>
+				</li>
+				</a>
+				{% endif %}
 			{% endfor %}
 			</ul>
 		</div>
