--- a/doku/static/doku/style.css
+++ b/doku/static/doku/style.css
@@ -285,6 +285,7 @@ input, select {
 	display: block;
 	padding: 6px 15px;
 	width: 98%;
+	height: 30px;
 	margin-bottom: 5px;
 	color: var(--text-color);
 	background-color: var(--sec-bg-color);
@@ -399,6 +400,21 @@ input[type=submit]:hover {
 #eNr input {
     font-size: 100%;
     padding-bottom: 2px;
+}
+
+#MeldungZug {
+    width: calc(15% - 3px);
+    margin-right: 5px;
+    float: left;
+}
+#MeldungInhalt {
+    width: calc(83% - 2px);
+    float: left;
+}
+.spacer {
+    width: 100%;
+    height: 1px;
+    clear: both;
 }
 
 /* Lagekarte */
