--- a/doku/templates/doku/base_generic.html
+++ b/doku/templates/doku/base_generic.html
@@ -12,7 +12,7 @@
 </body>
 	{% csrf_token %}
 	<!-- Menu -->
-	<div class="topmenu{% if training %} Wichtig{% endif %}">
+	<div class="topmenu{% if training %} Training{% endif %}">
 	<!-- Userinfo -->
 		<div class="header linkesModul">
 			<div class="dropdown">
