--- a/doku/templates/doku/base_generic.html
+++ b/doku/templates/doku/base_generic.html
@@ -4,10 +4,18 @@
 	<meta charset="UTF-8">
 	<meta  name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{{ einstellungen.Name }}</title>
+	<link rel="shortcut icon" href="{%  static 'doku/favicon.ico' %}">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	<script src="https://unpkg.com/@popperjs/core@2"></script>
+	<!--
+	<link rel="stylesheet" media="print" type="text/css" href="{% static 'doku/bootstrap.min.css' %}">
+	<script type="text/javascript" src="{% static 'doku/jquery-3.4.1.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'doku/bootstrap.min.js' %}"></script>
+	-->
 	<link rel="stylesheet" media="screen" type="text/css" href="{% static 'doku/style.css' %}">
 	<link rel="stylesheet" media="print" type="text/css" href="{% static 'doku/print.css' %}">
-	<link rel="shortcut icon" href="{%  static 'doku/favicon.ico' %}">
-	<script type="text/javascript" src="{% static 'doku/jquery-3.4.1.min.js' %}"></script>
 </head>
 </body>
 	{% csrf_token %}
