--- a/doku/templates/doku/einsatz.html
+++ b/doku/templates/doku/einsatz.html
@@ -8,309 +8,11 @@
 		{{ einsatz.extNummer }}{% else %}{{einsatz.Nummer}}{% endif %} {{ einsatz.Stichwort.Kurzname }}
 		{% if einsatz.OrtFrei %}{{ einsatz.OrtFrei }}{% else %}{{ einsatz.Ort.Langname }}{% endif %}`;
 	</script>
-	<div class="Modul linkesModul">
-		<h2>Grunddaten</h2>
-		<div class="minimize-button active">-</div>
-		<div class="minimize-this" style="display:block;">
-			{% if einstellungen.Einsatznummer %}
-			<b>Einsatznummer:</b><br>
-				{% if not einsatz.Ende or not einsatz.extNummer %}
-					{% if autor %}
-						<div id="eNr"><span class="do-not-show">&nbsp;&nbsp;&nbsp;</span>
-							<input name="extENr"
-								   placeholder="{{ einsatz.Nummer }}" {% if einsatz.extNummer %}
-								   value="{{ einsatz.extNummer }}"{% endif %} autocomplete="false"></div>
-						<script>
-							$("#eNr").focusout(function(){
-								var einsatznummer = $("input[name='extENr']").val();
-								let url = "{% url 'doku:einsatznummer' einsatz.Nummer %}";
-								$.post( url , { extENr : einsatznummer } );
-							})
-						</script>
-					{% endif %}
-				{% else %}
-					&nbsp;&nbsp;&nbsp;{% if einsatz.extNummer %}{{ einsatz.extNummer }}{% else %}{{einsatz.Nummer}}{% endif %}<br>
-				{% endif %}
-
-			{% endif %}
-			{% if einstellungen.Einsatzleiter %}
-			<b>Einsatzleiter:</b><br>
-				{% if autor and not einsatz.Ende %}
-					<div id="einsatzleiter"><span class="do-not-show">&nbsp;&nbsp;&nbsp;</span>
-						<input name="einsatzleiter"
-							   placeholder="Kein Einsatzleiter eingetragen!" {% if einsatz.Einsatzleiter %}
-							   value="{{ einsatz.Einsatzleiter }}"{% endif %}
-							   autocomplete="false">
-					</div>
-					<script>
-						$("#einsatzleiter").focusout(function(){
-							var einsatzleiter = $("input[name='einsatzleiter']").val();
-							let url = "{% url 'doku:einsatzleiter' einsatz.Nummer %}";
-							$.post( url , { einsatzleiter : einsatzleiter } );
-						})
-					</script>
-				{% else %}
-					&nbsp;&nbsp;&nbsp;{% if einsatz.Einsatzleiter %}
-						{{ einsatz.Einsatzleiter }}
-					{% else %}
-						Kein Einsatzleiter eingetragen!
-					{% endif %}
-					<br>
-				{% endif %}
-			{% endif %}
-			<b>Einsatzstichwort:</b><br>&nbsp;&nbsp;&nbsp;{{ einsatz.Stichwort }}<br>
-			<b>Adresse:</b><br>&nbsp;&nbsp;&nbsp;
-			<a target="_blank"
-			   class="do-not-print"
-			   href="https://www.google.de/maps/place/{{ einsatz.getMapsCompatibleAdress }}/200m/data=!3m1!1e3">
-				{{ einsatz.Adresse }}, {% if einsatz.OrtFrei %}{{ einsatz.OrtFrei }}{% else %}{{ einsatz.Ort.Langname }}
-				{% endif %}<br></a>
-			<span class="do-not-show">{{ einsatz.Adresse }}, {% if einsatz.OrtFrei %}{{ einsatz.OrtFrei }}{% else %}{{ einsatz.Ort.Langname }}
-				{% endif %}<br /></span>
-			<b>Einsatzbeginn:</b><br>&nbsp;&nbsp;&nbsp;{{ einsatz.Erstellt }}<br>
-			{% if einsatz.Ende %}
-				<b>Einsatzende:</b><br>&nbsp;&nbsp;&nbsp;{{ einsatz.Ende }}<br>
-			{% endif %}
-			&nbsp;
-			{% if autor and not einsatz.Ende %}
-				<form name="einsatzende"
-					  action="{% url 'doku:einsatzende' einsatz.Nummer %}"
-					  method="post"
-					  autocomplete="off">
-					{% csrf_token %}
-					<div class="checkboxdiv"><label class="container">
-						<input name="sicher" type="checkbox" required>
-						<span class="checkmark">X</span>
-					</label></div>
-					<input type="submit" class="check" value="Einsatzende">
-				</form>
-			{% endif %}
-		</div>
-		{% if einstellungen.Personen %}
-		<h2 {% if not alle_Personen %}class="do-not-print" {% endif %}>Beteiligte Personen</h2>
-		<div class="minimize-button active">-</div>
-		<div class="minimize-this" style="display:block;">
-			{% if autor and not einsatz.Ende %}
-				<form id="neue_Person"
-					  name="neue_Person"
-					  action="{% url 'doku:neuePerson' einsatz.Nummer %}"
-					  method="post"
-					  autocomplete="off">
-					{% csrf_token %}
-					<input hidden class="do-not-show" autocomplete="false">
-					<input name="Nachname" placeholder="Nachname" required/>
-					<input name="Vorname" placeholder="Vorname" required/>
-					<input name="Rolle" placeholder="Rolle" required/>
-					<input name="Notizen" placeholder="Notizen (z.B. Adresse)"/>
-					<input type="submit" value="Hinzufügen / Ändern">
-				</form>
-			{% else %}
-				&nbsp;<br />&nbsp;<br />&nbsp;
-			{% endif %}
-			{% if alle_Personen %}
-				<ul>
-				{% for person in alle_Personen %}
-					<li class="Person"
-						{% if person.Notizen %}data-toggle="tooltip" title="{{ person.Notizen }}"{% endif %}
-						data-placement="bottom">
-						{{ person }}
-						<ul class="do-not-show">
-							<li>{{ person.Notizen }}</li>
-						</ul>
-					</li>
-				{% endfor %}
-				</ul>
-			{% endif %}
-		</div>
-		{% endif %}
-	</div>
+	{% include "doku/links.html" %}
 	
-	<!-- Abschnitt Meldungen -->
-	<div class="Modul mittleresModul">
-	<h2>{% if einsatz.Training %}Trainings-{% endif %}Meldungen</h2>
-	<div class="minimize-button active">-</div>
-	<div class="minimize-this" style="display:block;">
-		{% if autor and not einsatz.Ende %}
-			<div class="Formular">
-				<form name="neue_Meldung" action="{% url 'doku:neueMeldung' einsatz.Nummer %}" method="post" autocomplete="off">
-					{% csrf_token %}
-					<input hidden class="do-not-show" autocomplete="false">
-					<select id="MeldungZug" name="Zug" onchange="rememberZug(this)">
-						<option value="" disabled selected>Zugauswahl</option>
-						<option value="">Kein Zug</option>
-						{% for Zug in alle_Zuege %}
-							<option value="{{ Zug.Name }}: ">{{ Zug.Name }}</option>
-						{% endfor %}
-					</select>
-					<input id="MeldungInhalt" name="Inhalt" placeholder="Neue Meldung" autofocus required/>
-					<div class="spacer"></div>
-					<div class="checkboxdiv"><label class="container">
-						<input name="Wichtig" type="checkbox">
-						<span class="checkmark">X</span>
-					</label></div>
-					<input type="submit" class="check" value="Neue Meldung hinzufügen">
-				</form>
-			</div>
-		{% else %}
-				&nbsp;<br />&nbsp;<br />
-		{% endif %}
-		{% if alle_Meldungen %}
-			<ul id="Meldungsliste" class="do-not-print">
-			{% for Meldung in alle_Meldungen %}
-				<li
-					class="Meldung {% if Meldung.Wichtig %}Wichtig {% endif %}"
-					id="{{ Meldung.pk }}"
-					{% if not Meldung.Wichtig %}style="background-color:{{ Meldung.Zug.Farbe }};"{% endif %}
-					data-toggle="tooltip" title="{{ Meldung.Autor.first_name }} {{ Meldung.Autor.last_name }} am {{ Meldung.Erstellt }}"
-					data-placement="bottom">
-						{{ Meldung.getTimeOrDate }} - {{ Meldung.Inhalt }}
-				</li>
-			{% endfor %}
-			</ul>
-			<table class="do-not-show">
-				<tr>
-					<th class="spalte1">Meldungstext</th>
-					<th class="spalte2">Autor</th>
-					<th class="spalte3h">Zeitpunkt</th>
-					<th class="spalte4">FEL</th>
-				</tr>
-				{% for Meldung in alle_Meldungen %}
-					<tr>
-						<td class="spalte1">{{ Meldung.Inhalt }}{% if Meldung.Wichtig %}</b>{% endif %}</td>
-						<td class="spalte2">{{ Meldung.Autor.first_name }} {{ Meldung.Autor.last_name }}</td>
-						<td class="spalte3">{{ Meldung.Erstellt }}</td>
-						<td class="spalte4">{% if Meldung.Wichtig %}&#10004;{% else %}X{% endif %}</td>
-					</tr>
-				{% endfor %}
-			</table>
-			{% if not einsatz.Ende %}
-			<script>
-				var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
-				function csrfSafeMethod(method) {
-					// these HTTP methods do not require CSRF protection
-					return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-				}
-				$.ajaxSetup({
-					beforeSend: function(xhr, settings) {
-						if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-							xhr.setRequestHeader("X-CSRFToken", csrftoken);
-						}
-					}
-				});
-				// Meldungen aktualisieren
-				(function update_Meldungen() {
-					lastIDfound = $(".Meldung").first().attr('id');
-					$.get({
-						method: "GET",
-						url: "{% url 'doku:Meldung' einsatz.Nummer %}",
-						data: {lastID: lastIDfound},
-						success: function(data) {
-							var jsonResponse = JSON.parse(data);
-							for (var i = 0; i < jsonResponse.length; i++){
-								var obj = jsonResponse[i];
-								if (obj.fields.Wichtig) {
-									$(".Meldung").first().before('<li class="Meldung Wichtig" id="' + obj.pk + '">' + obj.fields.Erstellt + " - " + obj.fields.Inhalt + '<ul class="print"><li>Verfasst von ' + obj.fields.Autor + ' am ' + obj.fields.Erstellt + '</li></ul></li>');
-								} else {
-									$(".Meldung").first().before('<li class="Meldung" id="' + obj.pk + '">' + obj.fields.Erstellt + " - " + obj.fields.Inhalt + '<ul class="print"><li>Verfasst von ' + obj.fields.Autor + ' am ' + obj.fields.Erstellt + '</li></ul></li>');
-								}
-							}
-						},
-						 complete: function() {
-							 setTimeout(update_Meldungen, 1000);
-						 }
-					})
-				})();
-			</script>
-			{% endif %}
-		{% endif %}
-		</div>
-	</div>
+	{% include "doku/mitte.html" %}
 	
-	<!-- Stärkemeldungen -->
-	<div class="Modul rechtesModul">
-    {% if einstellungen.Lagekarten %}
-	<h2 class="do-not-print">Sonstiges</h2>
-	<div class="minimize-button active">-</div>
-	<div class="minimize-this do-not-print">
-		<div class="Toolbox">
-			<a target="_blank" href="{% url 'doku:lagekarte' einsatz.Nummer %}"><button>Lagekarten</button></a>
-			<a target="_blank" href="{{ einstellungen.Hydranten }}"><button>Hydranten</button></a>
-			<a target="_blank" href="https://www.dgg.bam.de/quickinfo/de/"><button>Gefahrgut</button></a>
-			<!--<a target="_blank" href=""><button>FeuerOn Infos</button></a>-->
-		</div>
-	</div>
-    {% endif %}
-	{% if einstellungen.Fahrzeuge %}
-	<h2 {% if not eingesetzte_Fahrzeuge %}class="do-not-print" {% endif %}>Fahrzeuge und Stärken</h2>
-	<div class="minimize-button active">-</div>
-	<div class="minimize-this" style="display:block;">
-		{% if autor and not einsatz.Ende %}
-			{% if alle_Fahrzeuge %}
-				<form name="neues_Fahrzeug"
-					  action="{% url 'doku:neuesFahrzeug' einsatz.Nummer %}"
-					  method="post"
-					  autocomplete="off">
-					{% csrf_token %}
-					<input hidden class="do-not-show" autocomplete="false">
-					<select name="Name">
-						{% for Fahrzeug in alle_Fahrzeuge %}
-							<option value="{{ Fahrzeug.Funkname }}">{{ Fahrzeug }}</option>
-						{% endfor %}
-					</select>
-					<input name="Besatzung" placeholder="0/0/0" maxlength="5" size="5" required/>
-					<input name="Atemschutz" placeholder="AGT" type="number" size="5" min="0" max="9">
-					<input type="submit" value="Hinzufügen / Ändern">
-				</form>
-			{% endif %}
-		{% else %}
-				&nbsp;<br />&nbsp;<br />&nbsp;
-		{% endif %}
-		{% if eingesetzte_Fahrzeuge %}
-			<ul id="Fahrzeugliste">
-			{% for Fahrzeug in eingesetzte_Fahrzeuge %}
-				<li class="Fahrzeug" style="background-color: {{ Fahrzeug.Name.Zug.Farbe }};"
-					data-toggle="tooltip" title="{{Fahrzeug.Name.Typ}} - {{ Fahrzeug.Name.Ort }}"
-					data-placement="bottom">
-					{{ Fahrzeug }}
-				</li>
-			{% endfor %}
-			</ul>
-		{% endif %}
-		<script>
-			$.get({
-				method: "GET",
-				url: "{% url 'doku:summePersonal' einsatz.Nummer %}",
-				success: function(data) {
-					var jsonResponse = JSON.parse(data);
-					for (var zug in jsonResponse) {
-						var ausgabe = "<li class='SummePersonal Wichtig'>";
-						if (zug != 'Gesamt') {
-							ausgabe += zug;
-							ausgabe += ": <div>";
-							ausgabe += jsonResponse[zug].zugfuehrer.toString();
-							ausgabe += "/";
-							ausgabe += jsonResponse[zug].gruppenfuehrer.toString();
-							ausgabe += "/";
-							ausgabe += jsonResponse[zug].mannschaft.toString();
-							ausgabe += " (";
-							ausgabe += jsonResponse[zug].atemschutz.toString();
-							ausgabe += " AGT)</div>";
-						} else {
-							let sum = jsonResponse[zug].zugfuehrer;
-							sum += jsonResponse[zug].gruppenfuehrer;
-							sum += jsonResponse[zug].mannschaft;
-							ausgabe += "<center class='do-not-print'>Insgesamt " + sum.toString()  + " Einsatzkräfte</center>"
-							ausgabe += "<span class='do-not-show'>Insgesamt " + sum.toString()  + " Einsatzkräfte</span>"
-						}
-						ausgabe += "</li>";
-						$("#Fahrzeugliste").prepend(ausgabe);
-					}
-				},
-			})
-		</script>
-	</div>
-	{% endif %}
-	</div>
+	{% include "doku/rechts.html" %}
 {% else %}
 	<h2>Kein Einsatz mit dieser Nummer vorhanden!</h2>
 {% endif %}
